packages/cys-dsl/src/dsl-parser.gen.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Line: peg$parseLine,
  };
  let peg$startRuleFunction = peg$parseLine;

  const peg$c0 = "[";
  const peg$c1 = "card";
  const peg$c2 = "arrow";
  const peg$c3 = "]";
  const peg$c4 = "rect";
  const peg$c5 = "text";
  const peg$c6 = "frame";
  const peg$c7 = "freedraw";
  const peg$c8 = "@pos(";
  const peg$c9 = ",";
  const peg$c10 = ")";
  const peg$c11 = "at";
  const peg$c12 = "(";
  const peg$c13 = "@size(";
  const peg$c14 = "@color(";
  const peg$c15 = "right-of";
  const peg$c16 = "below";
  const peg$c17 = "@gap(";
  const peg$c18 = "create";
  const peg$c19 = "from";
  const peg$c20 = "to";
  const peg$c21 = "@label(";
  const peg$c22 = "@text(";
  const peg$c23 = "@title(";
  const peg$c24 = "@content(";
  const peg$c25 = "@dash(";
  const peg$c26 = "@arrowhead(";
  const peg$c27 = "@route(";
  const peg$c28 = "@curve(";
  const peg$c29 = "@elbow(";
  const peg$c30 = "@wikilink";
  const peg$c31 = "-";
  const peg$c32 = ".";
  const peg$c33 = "\\";
  const peg$c34 = "\"";
  const peg$c35 = "#";

  const peg$r0 = /^[^)]/;
  const peg$r1 = /^[0-9]/;
  const peg$r2 = /^[^"\\]/;
  const peg$r3 = /^[a-zA-Z0-9_:\-]/;
  const peg$r4 = /^[^ \t]/;
  const peg$r5 = /^[ \t]/;

  const peg$e0 = peg$literalExpectation("[", false);
  const peg$e1 = peg$literalExpectation("card", false);
  const peg$e2 = peg$anyExpectation();
  const peg$e3 = peg$literalExpectation("arrow", false);
  const peg$e4 = peg$literalExpectation("]", false);
  const peg$e5 = peg$literalExpectation("rect", false);
  const peg$e6 = peg$literalExpectation("text", false);
  const peg$e7 = peg$literalExpectation("frame", false);
  const peg$e8 = peg$literalExpectation("freedraw", false);
  const peg$e9 = peg$literalExpectation("@pos(", false);
  const peg$e10 = peg$literalExpectation(",", false);
  const peg$e11 = peg$literalExpectation(")", false);
  const peg$e12 = peg$literalExpectation("at", false);
  const peg$e13 = peg$literalExpectation("(", false);
  const peg$e14 = peg$literalExpectation("@size(", false);
  const peg$e15 = peg$literalExpectation("@color(", false);
  const peg$e16 = peg$classExpectation([")"], true, false, false);
  const peg$e17 = peg$literalExpectation("right-of", false);
  const peg$e18 = peg$literalExpectation("below", false);
  const peg$e19 = peg$literalExpectation("@gap(", false);
  const peg$e20 = peg$literalExpectation("create", false);
  const peg$e21 = peg$literalExpectation("from", false);
  const peg$e22 = peg$literalExpectation("to", false);
  const peg$e23 = peg$literalExpectation("@label(", false);
  const peg$e24 = peg$literalExpectation("@text(", false);
  const peg$e25 = peg$literalExpectation("@title(", false);
  const peg$e26 = peg$literalExpectation("@content(", false);
  const peg$e27 = peg$literalExpectation("@dash(", false);
  const peg$e28 = peg$literalExpectation("@arrowhead(", false);
  const peg$e29 = peg$literalExpectation("@route(", false);
  const peg$e30 = peg$literalExpectation("@curve(", false);
  const peg$e31 = peg$literalExpectation("@elbow(", false);
  const peg$e32 = peg$literalExpectation("@wikilink", false);
  const peg$e33 = peg$literalExpectation("-", false);
  const peg$e34 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e35 = peg$literalExpectation(".", false);
  const peg$e36 = peg$literalExpectation("\\", false);
  const peg$e37 = peg$classExpectation(["\"", "\\"], true, false, false);
  const peg$e38 = peg$literalExpectation("\"", false);
  const peg$e39 = peg$literalExpectation("#", false);
  const peg$e40 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ":", "-"], false, false, false);
  const peg$e41 = peg$classExpectation([" ", "\t"], true, false, false);
  const peg$e42 = peg$classExpectation([" ", "\t"], false, false, false);

  function peg$f0(ds) {    return { kind: 'card', ds: ds }  }
  function peg$f1(d) {    return d  }
  function peg$f2(ds) {    return { kind: 'arrow', ds: ds }  }
  function peg$f3(d) {    return d  }
  function peg$f4(ds) {    return { kind: 'rect', ds: ds }  }
  function peg$f5(ds) {    return { kind: 'text', ds: ds }  }
  function peg$f6(ds) {    return { kind: 'frame', ds: ds }  }
  function peg$f7(d) {    return d  }
  function peg$f8() {    return { kind: 'freedraw' }  }
  function peg$f9() {    return { kind: 'unknown' }  }
  function peg$f10() {    return null  }
  function peg$f11(id) {    return ['id', id]  }
  function peg$f12(x, y) {    return ['pos', x, y]  }
  function peg$f13(x, y) {    return ['pos', x, y]  }
  function peg$f14(w, h) {    return ['size', w, h]  }
  function peg$f15(c) {    return ['color', c]  }
  function peg$f16(dir, anchor) {    return ['rel', dir, anchor]  }
  function peg$f17(g) {    return ['gap', g]  }
  function peg$f18() {    return ['create', true]  }
  function peg$f19(id) {    return ['from', id]  }
  function peg$f20(id) {    return ['to', id]  }
  function peg$f21(v) {    return ['label', v]  }
  function peg$f22(v) {    return ['text', v]  }
  function peg$f23(v) {    return ['title', v]  }
  function peg$f24(v) {    return ['content', v]  }
  function peg$f25(c) {    return ['dash', c]  }
  function peg$f26(c) {    return ['arrowhead', c]  }
  function peg$f27(c) {    return ['route', c]  }
  function peg$f28(x, y) {    return ['curve', x, y]  }
  function peg$f29(v) {    return ['elbow', v]  }
  function peg$f30() {    return ['wikilink', true]  }
  function peg$f31(v) {    return v  }
  function peg$f32(id) {    return id  }
  function peg$f33() {    return null  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseLine() {
    let s0;

    s0 = peg$parsecardLine();
    if (s0 === peg$FAILED) {
      s0 = peg$parsearrowLine();
      if (s0 === peg$FAILED) {
        s0 = peg$parserectLine();
        if (s0 === peg$FAILED) {
          s0 = peg$parsetextLine();
          if (s0 === peg$FAILED) {
            s0 = peg$parseframeLine();
            if (s0 === peg$FAILED) {
              s0 = peg$parsefreedrawLine();
              if (s0 === peg$FAILED) {
                s0 = peg$parsebracketUnknown();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseprose();
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsecardLine() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesp();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsecardDir();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsecardDir();
          }
          s5 = [];
          if (input.length > peg$currPos) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
          }
          peg$savedPos = s0;
          s0 = peg$f0(s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecardDir() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsews();
    s2 = peg$parseidDir();
    if (s2 === peg$FAILED) {
      s2 = peg$parseposDir();
      if (s2 === peg$FAILED) {
        s2 = peg$parsesizeDir();
        if (s2 === peg$FAILED) {
          s2 = peg$parsecolorDir();
          if (s2 === peg$FAILED) {
            s2 = peg$parserelationDir();
            if (s2 === peg$FAILED) {
              s2 = peg$parsegapDir();
              if (s2 === peg$FAILED) {
                s2 = peg$parsecreateDir();
                if (s2 === peg$FAILED) {
                  s2 = peg$parsetitleDir();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parsecontentDir();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parseskipChunk();
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsearrowLine() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 5) === peg$c2) {
        s2 = peg$c2;
        peg$currPos += 5;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesp();
        if (s3 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 93) {
            s3 = peg$c3;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsearrowDir();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsearrowDir();
          }
          s5 = [];
          if (input.length > peg$currPos) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
          }
          peg$savedPos = s0;
          s0 = peg$f2(s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsearrowDir() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsews();
    s2 = peg$parseidDir();
    if (s2 === peg$FAILED) {
      s2 = peg$parsefromDir();
      if (s2 === peg$FAILED) {
        s2 = peg$parsetoDir();
        if (s2 === peg$FAILED) {
          s2 = peg$parseposDir();
          if (s2 === peg$FAILED) {
            s2 = peg$parsesizeDir();
            if (s2 === peg$FAILED) {
              s2 = peg$parsecolorDir();
              if (s2 === peg$FAILED) {
                s2 = peg$parselabelDir();
                if (s2 === peg$FAILED) {
                  s2 = peg$parsedashDir();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parsearrowheadDir();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parsecurveDir();
                      if (s2 === peg$FAILED) {
                        s2 = peg$parserouteDir();
                        if (s2 === peg$FAILED) {
                          s2 = peg$parseelbowDir();
                          if (s2 === peg$FAILED) {
                            s2 = peg$parsewikilinkDir();
                            if (s2 === peg$FAILED) {
                              s2 = peg$parseskipChunk();
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f3(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parserectLine() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c4) {
        s2 = peg$c4;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesp();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsefreeDir();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsefreeDir();
          }
          s5 = [];
          if (input.length > peg$currPos) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
          }
          peg$savedPos = s0;
          s0 = peg$f4(s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetextLine() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c5) {
        s2 = peg$c5;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesp();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsefreeDir();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsefreeDir();
          }
          s5 = [];
          if (input.length > peg$currPos) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
          }
          peg$savedPos = s0;
          s0 = peg$f5(s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseframeLine() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 5) === peg$c6) {
        s2 = peg$c6;
        peg$currPos += 5;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesp();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsefreeDir();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsefreeDir();
          }
          s5 = [];
          if (input.length > peg$currPos) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
          }
          peg$savedPos = s0;
          s0 = peg$f6(s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefreeDir() {
    let s0, s1, s2;
